# gloventure

./: .gitignore  README.md  deploy_start.sh  design_guidelines.json  pyproject.toml
backend/: server.py
backend/tests/: backend_test.py
frontend/: craco.config.js  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: AdminProducts.jsx  Footer.jsx  Navbar.jsx  WhatsAppTemplates.jsx
frontend/src/lib/: api.js
frontend/src/pages/: AdminDashboard.jsx  AdminLogin.jsx  Landing.jsx  Order.jsx  OrderSuccess.jsx  TrackOrder.jsx
memory/: PRD.md
prodserver/: package.json  server.js
test_reports/: iteration_1.json
test_reports/pytest/: pytest_results.xml
