[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.1.3",
    "email-validator>=2.3.0",
    "fastapi==0.110.1",
    "motor==3.3.1",
    "openpyxl>=3.1.5",
    "passlib>=1.7.4",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "pymongo==4.5.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn==0.25.0",
]
